2012-08-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexmac.h: Drop unused definition of M_PI & Co.

2012-08-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexlib.h: extern void writestreamlength(longinteger, longinteger);
	for largefile. 
	extern void storepacket(internalfontnumber, integer, strnumber); to
	avoid a compiler warning.
	* utils.c: void writestreamlength(longinteger length, longinteger offset)
	for largefile.
	* vfpacket.c: void storepacket(internalfontnumber f, integer c, strnumber s)
	to avoid a compiler warning.

2012-08-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftex.web: Update eTeX_revision and eTeX_version_string.

2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftex.web: Adapt to e-TeX Version 2.5.
	* am/pdftex.am: Clarify *tex_version.h dependencies.

2012-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c (initversionstring): Avoid using asprintf().

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/pdftex.am: Distribute pdftex_version.h.
	* pdftexextra.h: Use ../etexdir/etex_version.h.

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writejbig2.c: Use LONGINTEGER_PRI instead of LONGINTEGER_PRId.

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ttf2afm.c: Pass program name string to kpse_set_program_name.

2012-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftexextra.c: Must #define DLLPROC before reading pdftexd.h.

2012-07-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c: Use EXIT_FAILURE instead of EX_SOFTWARE.

2012-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* writejbig2.c: Cast xfseeko() arg2 to avoid MSVC warning.

2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdftexextra.c [W32TeX]: #define DLLPROC for pdftex.dll.

2012-06-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.c [__MINGW32__]: #include <regex.h> as for Unix instead
	of <regex/regex.h>.
	* am/libpdftex.am (libpdftex_a_CPPFLAGS): Change accordingly.
